fix: Muck attempt to adjust z-index of infowindow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,15 +50,7 @@ body {
   font-size: 15px;
 }
 
-.gm-style-iw {
-  z-index: 99999999;
-}
-
 @media only screen and (max-width: 500px) {
-
-    .gm-style-iw {
-      z-index: 99999999;
-    }
 
     h2 {
       font-size: 10px;
@@ -111,6 +103,4 @@ body {
     font-size: 15px;
     z-index: 0;
   }
-
-
 }
